# ntsc-codec

./: CHANGELOG.md  README.md  cabal.project  notes.md  ntsc-codec.cabal  plan.md
app/: Main.hs
examples/: Main.hs
src/: CLI.hs
src/NTSC/: Color.hs  Signal.hs  Types.hs
